# FFmpegUVCPlayer

./: CMakeLists.txt  MyMainWindows.cpp  MyMainWindows.h  main.cpp  readme  resources.qrc
resources/translations/: en.qm
src/: CameraSettingPage.cpp  CameraSettingPage.h  CameraSwitchingPage.cpp  CameraSwitchingPage.h  FFmpegPlayer.cpp  FFmpegPlayer.h  FFmpegRecorder.cpp  FFmpegRecorder.h  Microscope_Utils_Config.cpp  Microscope_Utils_Config.h  Microscope_Utils_Log.cpp  Microscope_Utils_Log.h  ThemeWidget.cpp  ThemeWidget.h  UVC_Win_DShow.cpp  UVC_Win_DShow.h  VideoWidget.cpp  VideoWidget.h
translations/: en.ts
